remove unnessecary code a little cleanup